--- a/elibrary-dao/pom.xml
+++ b/elibrary-dao/pom.xml
@@ -8,9 +8,16 @@
         <groupId>by.it.academy.grodno.elibrary</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>elibrary-service</artifactId>
-    <name>elibrary-service</name>
-    <description>The service.</description>
+    <artifactId>elibrary-dao</artifactId>
+    <name>elibrary-dao</name>
+    <description>The DAO module.</description>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
