--- a/elibrary-entity/pom.xml
+++ b/elibrary-entity/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>elibrary-entity</artifactId>
-    <packaging>jar</packaging>
-
     <parent>
         <artifactId>elibrary</artifactId>
         <groupId>by.it.academy.grodno.elibrary</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <artifactId>elibrary-entity</artifactId>
+    <name>elibrary-entity</name>
+    <description>The entity module.</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
