--- a/elibrary-api/pom.xml
+++ b/elibrary-api/pom.xml
@@ -30,12 +30,52 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Jackson Databind -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.12.1</version>
+        <!-- For testing -->
+<!--        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-main</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
             <optional>true</optional>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-service</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-entity</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-dao</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-rest</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>by.it.academy.grodno.elibrary</groupId>
+                    <artifactId>elibrary-controller</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
         <dependency>
