--- a/elibrary-service/pom.xml
+++ b/elibrary-service/pom.xml
@@ -25,5 +25,12 @@
             <artifactId>elibrary-dao</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
