Add OAuth2 with GitHub and Facebook, but it don't work with Google. There is one problem in OAuth2LoginAuthenticationFilter line 161, not handshake (working in postman request). Add BookScraper interface.

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -39,39 +39,40 @@ spring.security.user.roles=ROLE_ADMIN
 # ===============================
 # = MVC
 # ===============================
-#spring.mvc.format.date=yyyy-MM-dd
-#spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
-#spring.mvc.format.time=HH:mm:ss
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
 
 # ===============================
 # = FACEBOOK
 # ===============================
-#spring.social.facebook.appId=2905222183091899
-#spring.social.facebook.appSecret=111f670fab6aab53ac98bfbc1d01f588
-#spring.security.oauth2.client.registration.facebook.client-id=2905222183091899
-#spring.security.oauth2.client.registration.facebook.client-secret=111f670fab6aab53ac98bfbc1d01f588
-#spring.security.oauth2.client.registration.facebook.scope=email, public_profile
-#spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.facebook.com/v3.0/dialog/oauth
-#spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
-#spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,name_format,short_name,email,verified,is_verified,picture
+spring.security.oauth2.client.registration.facebook.client-id=220515239881245
+spring.security.oauth2.client.registration.facebook.client-secret=5eeea71d605b3390395695d944cfa3c6
+spring.security.oauth2.client.registration.facebook.scope=email, public_profile
+spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.facebook.com/v3.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,name_format,short_name,email,verified,is_verified,picture
 
 # ===============================
 # = GOOGLE
 # ===============================
-#spring.security.oauth2.client.registration.google.client-id=818365433689-lrpo9rfvsn4h5sb4mfgcen5ihc6b9bd9.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=A5oJlNAgih8-2uZ61ika6sKz
-#spring.security.oauth2.client.registration.google.scope=profile, email
-#spring.security.oauth2.client.provider.google.authorizationUri=https://accounts.google.com/o/oauth2/auth
-#spring.security.oauth2.client.provider.google.tokenUri=https://www.googleapis.com/oauth2/v3/token
-#spring.security.oauth2.client.provider.google.userInfoUri=https://www.googleapis.com/userinfo/v2/me
+spring.security.oauth2.client.registration.google.client-id=253438459757-6mogjrakvmjd8079np9p2mav5i7obbi8.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-authentication-method=POST
+#spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email,openid,https://www.googleapis.com/auth/userinfo.profile
+#spring.security.oauth2.client.provider.google.authorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.tokenUri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.userInfoUri=https://www.googleapis.com/oauth2/v2/userinfo
 
-## ===============================
-## = GITHUB
-## ===============================
-#spring.security.oauth2.client.registration.github.client-id=c81ed5a908bb1f0c99dc
-#spring.security.oauth2.client.registration.github.client-secret=1ee0a1d905e819ca36dc980f4051b2253b9c286f
-#spring.security.oauth2.client.registration.github.scope=user,user:email
-#
+# ===============================
+# = GITHUB
+# ===============================
+spring.security.oauth2.client.registration.github.client-id=af9caebc59f3475924a9
+spring.security.oauth2.client.registration.github.client-secret=96dd21235caf671d1efa243aeae64a4ec62f0f87
+spring.security.oauth2.client.registration.github.scope=user,user:email
+
 ## ===============================
 ## = MAIL
 ## ===============================
