--- a/elibrary-service/pom.xml
+++ b/elibrary-service/pom.xml
@@ -27,6 +27,12 @@
         </dependency>
 
         <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-web</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>13.0</version>
