Start writing email sender. Add search book with subcategory.

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -76,15 +76,17 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 ## ===============================
 ## = MAIL
 ## ===============================
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=username@mail.ru
-#spring.mail.password=password
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.debug=true
-#spring.mail.properties.mail.transport.protocol=smtp
-#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=username@mail.ru
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+
+google.credentials.api-key-1=AIzaSyBRvG_qTqT0Ypt6fkPkjRfuK4twObOFb1A
+
 ## ===============================
 ## = VELOCITY ENGINE
 ## ===============================
