Add email templates.

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -76,10 +76,11 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 ## ===============================
 ## = MAIL
 ## ===============================
+mail=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=username@mail.ru
-spring.mail.password=password
+spring.mail.username=rachko.a.ch@gmail.com
+spring.mail.password=MTUwMDAwNTA0NTMwMQ==
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
