--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -76,7 +76,7 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 ## ===============================
 ## = MAIL
 ## ===============================
-mail=false
+spring.mail.send=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rachko.a.ch@gmail.com
@@ -85,6 +85,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.default-encoding=UTF-8
 
 google.credentials.api-key-1=AIzaSyBRvG_qTqT0Ypt6fkPkjRfuK4twObOFb1A
 
