--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -30,11 +30,11 @@ spring.security.user.roles=ROLE_ADMIN
 # ===============================
 # = LIQUIBASE
 # ===============================
-#spring.liquibase.enabled=false
-#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-#spring.liquibase.url=${spring.datasource.url}
-#spring.liquibase.user=${spring.datasource.username}
-#spring.liquibase.password=${spring.datasource.password}
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.url=${spring.datasource.url}
+spring.liquibase.user=${spring.datasource.username}
+spring.liquibase.password=${spring.datasource.password}
 
 # ===============================
 # = MVC
