Add some changes to html files. Add sorting link to html page.

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -76,7 +76,7 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 ## ===============================
 ## = MAIL
 ## ===============================
-spring.mail.send=true
+spring.mail.send=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rachko.a.ch@gmail.com
