--- a/elibrary-rest/pom.xml
+++ b/elibrary-rest/pom.xml
@@ -2,20 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>elibrary</artifactId>
         <groupId>by.it.academy.grodno.elibrary</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>elibrary-rest</artifactId>
+    <name>elibrary-rest</name>
+    <description>The REST service.</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
