Add book cover upload/

--- a/elibrary-api/src/test/resources/application.properties
+++ b/elibrary-api/src/test/resources/application.properties
@@ -18,3 +18,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # = H2
 # ===============================
 spring.h2.console.enabled=true
+
+# ===============================
+# = LIQUIBASE
+# ===============================
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.url=${spring.datasource.url}
+spring.liquibase.user=${spring.datasource.username}
+spring.liquibase.password=${spring.datasource.password}
