--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -87,13 +87,10 @@ spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.default-encoding=UTF-8
 
+## ===============================
+## = FILE UPLOADER
+## ===============================
+upload-file-to-source-folder=true
+
 
 google.credentials.api-key-1=AIzaSyBRvG_qTqT0Ypt6fkPkjRfuK4twObOFb1A
-
-## ===============================
-## = VELOCITY ENGINE
-## ===============================
-#input.encoding=UTF-8
-#output.encoding=UTF-8
-#resource.loader=class
-#class.resource.loader.class=org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
