Add changelog.xml files

--- a/elibrary-api/pom.xml
+++ b/elibrary-api/pom.xml
@@ -58,6 +58,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyyMMdd-HHmmssSSS</maven.build.timestamp.format>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
