--- a/elibrary-api/src/main/resources/liquibase-maven-plugin.properties
+++ b/elibrary-api/src/main/resources/liquibase-maven-plugin.properties
@@ -1,5 +1,5 @@
 #changeLogFile= @project.basedir@/src/main/resources/db/changelog/db.changelog-master.xml
-url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=UTC
 username=root
 password=1234
 driver=com.mysql.cj.jdbc.Driver
