Add liquibase changelog files Change returning values in some services

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.security.user.roles=ROLE_ADMIN
 # ===============================
 # = LIQUIBASE
 # ===============================
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.url=${spring.datasource.url}
 spring.liquibase.user=${spring.datasource.username}
@@ -58,13 +58,6 @@ spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebo
 # ===============================
 spring.security.oauth2.client.registration.google.client-id=253438459757-6mogjrakvmjd8079np9p2mav5i7obbi8.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=http://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.client-authentication-method=POST
-#spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email,openid,https://www.googleapis.com/auth/userinfo.profile
-#spring.security.oauth2.client.provider.google.authorizationUri=https://accounts.google.com/o/oauth2/v2/auth
-spring.security.oauth2.client.provider.google.tokenUri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.userInfoUri=https://www.googleapis.com/oauth2/v2/userinfo
 
 # ===============================
 # = GITHUB
@@ -91,6 +84,3 @@ spring.mail.default-encoding=UTF-8
 ## = FILE UPLOADER
 ## ===============================
 upload-file-to-source-folder=true
-
-
-google.credentials.api-key-1=AIzaSyBRvG_qTqT0Ypt6fkPkjRfuK4twObOFb1A
