--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
+                        <mainClass>by.it.academy.grodno.elibrary.ELibraryApplication</mainClass>
                         <excludes>
                             <exclude>
                                 <groupId>org.projectlombok</groupId>
