--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,51 +1,39 @@
-# ===============================
 # = DATA SOURCE
-# ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
 # = JPA / HIBERNATE
-# ===============================
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
 
-# ===============================
-# = DEBUG
-# ===============================
+# = LOGGING
 debug=false
+logging.level.root=info
+logging.file.path=logs/
+logging.file.name=${logging.file.path}elib
+logging.logback.rollingpolicy.file-name-pattern=${logging.file.name}.%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-file-size=5MB
+logging.logback.rollingpolicy.max-history=3
+logging.logback.rollingpolicy.total-size-cap=100MB
 
-# ===============================
-# = SECURITY (default)
-# ===============================
-spring.security.user.name=user
-spring.security.user.password=12345
-spring.security.user.roles=ROLE_ADMIN
-
-# ===============================
 # = LIQUIBASE
-# ===============================
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.url=${spring.datasource.url}
 spring.liquibase.user=${spring.datasource.username}
 spring.liquibase.password=${spring.datasource.password}
 
-# ===============================
 # = MVC
-# ===============================
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
-# ===============================
 # = FACEBOOK
-# ===============================
 spring.security.oauth2.client.registration.facebook.client-id=220515239881245
 spring.security.oauth2.client.registration.facebook.client-secret=5eeea71d605b3390395695d944cfa3c6
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
@@ -53,22 +41,20 @@ spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.fac
 spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
 spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,name_format,short_name,email,verified,is_verified,picture
 
-# ===============================
 # = GOOGLE
-# ===============================
 spring.security.oauth2.client.registration.google.client-id=253438459757-6mogjrakvmjd8079np9p2mav5i7obbi8.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=http://localhost:8080/login/oauth2/code/google
 
-# ===============================
 # = GITHUB
-# ===============================
 spring.security.oauth2.client.registration.github.client-id=af9caebc59f3475924a9
 spring.security.oauth2.client.registration.github.client-secret=96dd21235caf671d1efa243aeae64a4ec62f0f87
 spring.security.oauth2.client.registration.github.scope=user,user:email
 
-## ===============================
+# = ACTUATOR
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+
 ## = MAIL
-## ===============================
 spring.mail.send=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -80,7 +66,5 @@ spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.default-encoding=UTF-8
 
-## ===============================
 ## = FILE UPLOADER
-## ===============================
 upload-file-to-source-folder=true
