--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -51,11 +51,11 @@ spring.security.oauth2.client.registration.github.client-secret=96dd21235caf671d
 spring.security.oauth2.client.registration.github.scope=user,user:email
 
 # = ACTUATOR
-management.endpoints.enabled-by-default=true
-management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
+#management.endpoints.web.exposure.include=*
 
 ## = MAIL
-spring.mail.send=false
+spring.mail.send=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rachko.a.ch@gmail.com
