Change database to Postgresql with Spring boot

--- a/elibrary-api/src/main/resources/liquibase-maven-plugin.properties
+++ b/elibrary-api/src/main/resources/liquibase-maven-plugin.properties
@@ -1,8 +1,8 @@
 #changeLogFile= @project.basedir@/src/main/resources/db/changelog/db.changelog-master.xml
-url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=UTC
-username=root
+url=jdbc:postgresql://localhost:5432/elibrary
+username=postgres
 password=1234
-driver=com.mysql.cj.jdbc.Driver
+driver=org.postgresql.Driver
 outputChangeLogFile=@project.basedir@/src/main/resources/db/changelog/generate-changelog/db.changelog-@timestamp@.xml
 #outputChangeLogFile=src/main/resources/liquibase-outputChangeLog.xml
 
