--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/elibrary
+spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # = JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
@@ -33,6 +33,8 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
+server.port=8081
+
 # = FACEBOOK
 spring.security.oauth2.client.registration.facebook.client-id=220515239881245
 spring.security.oauth2.client.registration.facebook.client-secret=5eeea71d605b3390395695d944cfa3c6
@@ -55,7 +57,7 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 #management.endpoints.web.exposure.include=*
 
 ## = MAIL
-spring.mail.send=true
+spring.mail.send=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rachko.a.ch@gmail.com
