--- a/elibrary-api/pom.xml
+++ b/elibrary-api/pom.xml
@@ -48,8 +48,8 @@
             <artifactId>modelmapper</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
