--- a/pom.xml
+++ b/pom.xml
@@ -32,17 +32,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.2.15.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.15.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.15.RELEASE</version>
         </dependency>
     </dependencies>
 
@@ -84,22 +81,37 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>5.2.15.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>5.2.15.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>5.2.15.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>5.2.15.RELEASE</version>
+            </dependency>
+
             <!-- ================== -->
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>2.5.1</version>
-            </dependency>
-
-             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context-support</artifactId>
-                <version>5.2.15.RELEASE</version>
+                <version>2.3.9.RELEASE</version>
             </dependency>
 
             <dependency>
                 <groupId>org.thymeleaf</groupId>
-                <artifactId>thymeleaf</artifactId>
+                <artifactId>thymeleaf-spring5</artifactId>
                 <version>3.0.12.RELEASE</version>
             </dependency>
 
@@ -112,13 +124,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
-                <version>5.4.5</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>5.2.15.RELEASE</version>
+                <version>5.2.10.RELEASE</version>
             </dependency>
 
             <dependency>
@@ -128,10 +134,15 @@
                 <scope>provided</scope>
             </dependency>
 
-             <dependency>
+            <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.4.32.Final</version>
+                <version>5.4.29.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>5.2.3.Final</version>
             </dependency>
 
             <dependency>
