Added SpringMvcDispatcherServletInitializer.java is analogue web.xml file, ELibraryApplicationRootConfig.java is application java root configuration and some configurations

--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>elibrary-main</artifactId>
     <name>elibrary-main</name>
     <description>The main module with main method for running application.</description>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -26,6 +26,12 @@
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-utils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-service</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
