--- a/elibrary-utils/pom.xml
+++ b/elibrary-utils/pom.xml
@@ -18,7 +18,6 @@
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-entity</artifactId>
@@ -36,6 +35,10 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
         </dependency>
     </dependencies>
 </project>
