--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/elibrary
+spring.datasource.url=jdbc:postgresql://localhost:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # = JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -24,6 +24,9 @@ logging.logback.rollingpolicy.total-size-cap=100MB
 # = LIQUIBASE
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.drop-first=false
+spring.liquibase.default-schema=public
+
 spring.liquibase.url=${spring.datasource.url}
 spring.liquibase.user=${spring.datasource.username}
 spring.liquibase.password=${spring.datasource.password}
