--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -30,7 +30,10 @@
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-service</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-logger</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -38,13 +41,5 @@
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-        </dependency>
     </dependencies>
 </project>
