--- a/elibrary-service/pom.xml
+++ b/elibrary-service/pom.xml
@@ -22,6 +22,12 @@
             <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
