Added test of the DAO layer

--- a/elibrary-api/src/test/resources/application.properties
+++ b/elibrary-api/src/test/resources/application.properties
@@ -5,25 +5,16 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
-#We can change that behavior by using file-based storage. To do this we need to update the spring.datasource.url:
-#spring.datasource.url=jdbc:h2:file:/data/demo
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# ===============================
-# = H2
-# ===============================
-spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # ===============================
 # = LIQUIBASE
 # ===============================
 spring.liquibase.enabled=false
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.url=${spring.datasource.url}
-spring.liquibase.user=${spring.datasource.username}
-spring.liquibase.password=${spring.datasource.password}
