Changed security to jwt token auth, but need do more pretty it solution

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -73,3 +73,6 @@ spring.mail.default-encoding=UTF-8
 
 ## = FILE UPLOADER
 upload-file-to-source-folder=true
+
+## = JWT Token
+jwt.secret=8523163241
