--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,11 @@
                 <artifactId>spring-security-config</artifactId>
                 <version>${org.springframework.security.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.projectlombok</groupId>
