Adds Dockerfile and description by building and running docker image

--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -24,10 +24,6 @@
         </dependency>
         <dependency>
             <groupId>by.it.academy.grodno.elibrary</groupId>
-            <artifactId>elibrary-dao</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-rest</artifactId>
         </dependency>
         <dependency>
@@ -43,5 +39,34 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>by.it.academy.grodno.elibrary.ELibraryApplication</mainClass>
+<!--                    <archive>-->
+<!--                        <manifest>-->
+<!--                            <mainClass>by.it.academy.grodno.elibrary.ELibraryApplication</mainClass>-->
+<!--                        </manifest>-->
+<!--                    </archive>-->
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
