--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-docker-container:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
