--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:postgresql://postgres-data:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -36,7 +36,7 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
-server.port=8081
+server.port=8080
 
 # = FACEBOOK
 spring.security.oauth2.client.registration.facebook.client-id=220515239881245
